tests/checker/diagnostics/0914_gadt_eval_bool_branch_mismatch_06.ml.infer.expected
File "0914_gadt_eval_bool_branch_mismatch_06.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0914_gadt_eval_bool_branch_mismatch_06 is not a valid module name.

File "0914_gadt_eval_bool_branch_mismatch_06.ml", line 7, characters 19-20:
7 |   | Bool_zeta b -> 5
                       ^
Error: The constant 5 has type int but an expression was expected of type
         a = bool
